<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <ImageView android:id="@+id/iv_sys_info_item_indicator"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginLeft="20dp"
               android:layout_marginTop="8dp"
               android:layout_marginBottom="8dp"
               android:contentDescription="@null"
               android:gravity="center_vertical"
               android:src="@drawable/service_item_geo"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_gravity="center_vertical"
                  android:orientation="vertical">
        <!-- name -->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.12"
                      android:gravity="right"
                      android:textColor="@android:color/black"
                      android:textSize="@dimen/font_size_xsmall"
                      android:text="@string/lint_sys_info_service_name"/>

            <TextView android:id="@+id/tv_sys_info_item_name"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.8"
                      android:layout_marginLeft="5dp"
                      android:textColor="@android:color/black"
                      android:textSize="@dimen/font_size_xsmall"
                      android:text="GeoService"/>
        </LinearLayout>
        <!-- clazz -->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.12"
                      android:gravity="right"
                      android:textColor="@android:color/black"
                      android:textSize="@dimen/font_size_xsmall"
                      android:text="@string/lint_sys_info_service_clazz"/>

            <TextView android:id="@+id/tv_sys_info_item_clazz"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.8"
                      android:layout_marginLeft="5dp"
                      android:textColor="@android:color/black"
                      android:textSize="@dimen/font_size_xsmall"
                      android:text="com.lynx.service.geo.impl1v1.GeoServiceImpl"/>
        </LinearLayout>
        <!-- version -->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.12"
                      android:gravity="right"
                      android:textColor="@android:color/black"
                      android:textSize="@dimen/font_size_xsmall"
                      android:text="@string/lint_sys_info_service_version"/>

            <TextView android:id="@+id/tv_sys_info_item_version"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.8"
                      android:layout_marginLeft="5dp"
                      android:textColor="@android:color/black"
                      android:textSize="@dimen/font_size_xsmall"
                      android:text="110"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>